// Copyright 2024, The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

message OptimizedBuildMetrics {
  // The total time spent analyzing what/how to optimize everything.
  optional double analysis_time = 1;
  // The total time spent building artifacts.
  optional double build_time = 2;
  // The total time spent packaging artifacts.
  optional double packaging_time = 3;
  // Information for a single target (e.g. general-tests).
  repeated TargetOptimizationResult target_result = 4;

  message TargetOptimizationResult {
    // Target name (e.g. general-tests).
    optional string name = 1;
    // Whether or not this target was optimized.
    optional bool optimized = 2;
    // Time spent packaging this specific target (if it was optimized).
    optional double packaging_time = 3;
    // Information for each different artifact produced by this target (if it
    // was optimized).
    repeated OutputArtifact output_artifact = 4;

    message OutputArtifact {
      // Artifact file name (e.g. general-tests.zip)
      optional string name = 1;
      // Size of the file.
      optional int64 size = 2;
      // Lists of modules packaged into this artifact.
      repeated string included_modules = 3;
    }
  }
}
